M Warner Losh           <imp@village.org>               20 Jan 2002
Mario Frasca                                            20 Jan 2000-14 Feb 2000
Paul Nasrat             <pnasrat@uk.now.com>            29 Oct 2001-20 Nov 2001
Per Olofsson            <MagerValp@cling.gu.se>         25 Feb 2000
Peter L Vachuska        <pvachusk@nconnect.net>         13 Aug 2001
Riley Williams          <rhw@MemAlpha.cx>               16 Nov 1998-23 Jan 2002
Roman Festchook         <roma@polesye.net>              27 Oct 2001
Simon Weijgers          <simon@weijgers.com>            16 Sep 1998-15 Nov 1999
Simon Wood                                              06 Jan 2000-12 Jan 2000
Thomas McWilliams       <tgm9999@yahoo.com>             27 Aug 1999-02 Apr 2001

-------------------------------------------------------------------------------

Wed Jan 23 00:56:51 GMT 2002	Riley Williams <rhw@MemAlpha.cx>

	* Made autoconf.h auto-created in all cases where it is needed.
	  This includes those cases in the elkscmd package.
	* Remove contents of elksfs.h header if elksfs not enabled.

Sun Jan 20 06:45:50 MST 2002	M Warner Losh <imp@village.org>

	* Allow elks to build on systems where gnumake isn't installed as
	  make and bash isn't installed as /bin/bash or /bin/sh !!!

Sun Jan 20 12:15:18 GMT 2002	Riley Williams <rhw@MemAlpha.cx>

	* Version number display actually committed.
	* Formatting clean-ups in Menuconfig script.
	* Two Makefiles were excluded from `make nodep` due to a typo,
	  so fixed it to include them as well.
	* Updated arch/i86/defconfig to reflect reality.
	* Removed autoconf.h from CVS as it's generated by compiler.

Sun Jan 20 01:09:25 EET 2002	Jacek Lipkowski <sq5bpf@acid.ch.pw.edu.pl>

	* Menuconfig non compilable fix.
	* Better version number display for menuconfig.

Fri Jan 18 23:22:10 GMT 2002	Riley Williams <rhw@MemAlpha.cx>

	* Updated TODO list from suggestions received.

Mon Jan 14 16:18:21 GMT 2002	Riley Williams <rhw@MemAlpha.cx>
